# cta

./: CMakeLists.txt  readme.md
include/: cta.hpp  differentiator.hpp  evaluator.hpp  functions.hpp  is_constant.hpp  macros.hpp  operators.hpp  output.hpp  simplifier.hpp  terms.hpp  types.hpp
src/: test.cpp
